--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-   "name": "api-films",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "devDependencies": {
-      "@types/node": "^8.0.29",
-      "@typescript-eslint/eslint-plugin": "^5.13.0",
-      "@typescript-eslint/parser": "^5.13.0",
-      "eslint": "^8.10.0",
-      "eslint-config-airbnb-base": "^15.0.0",
-      "eslint-config-prettier": "^8.4.0",
-      "eslint-import-resolver-typescript": "^2.5.0",
-      "eslint-plugin-import": "^2.25.4",
-      "eslint-plugin-import-helpers": "^1.2.1",
-      "eslint-plugin-prettier": "^4.0.0",
-      "prettier": "^2.5.1",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "@types/express": "^4.17.13",
-      "express": "^4.17.3",
-      "mongodb": "^3.0.8",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.41"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts",
-      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
-   }
+    "name": "api-films",
+    "version": "1.0.0",
+    "main": "server.ts",
+    "license": "MIT",
+    "devDependencies": {
+        "eslint": "^8.10.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.4.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-import-helpers": "^1.2.1",
+        "eslint-plugin-prettier": "^4.0.0",
+        "nodemon": "^2.0.15",
+        "prettier": "^2.5.1",
+        "ts-node": "3.3.0",
+        "typescript": "3.3.3333"
+    },
+    "dependencies": {
+        "@types/express": "^4.17.13",
+        "@types/uuid": "^8.3.4",
+        "body-parser": "^1.19.2",
+        "express": "^4.17.3",
+        "mongodb": "^3.0.8",
+        "reflect-metadata": "^0.1.10",
+        "typeorm": "0.2.41",
+        "uuid": "^8.3.2",
+        "@types/node": "^8.0.29",
+        "@typescript-eslint/eslint-plugin": "^5.13.0",
+        "@typescript-eslint/parser": "^5.13.0"
+    },
+    "scripts": {
+        "dev": "nodemon --inspect src/server.ts",
+        "start": "ts-node src/index.ts",
+        "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    }
 }
